--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "rocket",
+  "homepage": "https://mykhailoko.github.io/rocket-game/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "vite": "^6.1.0"
@@ -14,6 +17,7 @@
   "dependencies": {
     "chart.js": "^4.4.8",
     "d3": "^7.9.0",
+    "gh-pages": "^6.3.0",
     "phaser": "^3.88.2"
   }
 }
